# pysatl-criterion

./: .codespell-ignore-words  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  deploy-docs.yml
criterion/: __init__.py  common.py  exponent.py  goodness_of_fit.py  graph_goodness_of_fit.py  models.py  normal.py  weibull.py
docs/: ahsanullah_exp_criterion.md  atkinson_exp_criterion.md  cox_oakes_exp_criterion.md  cvm_exp_criterion.md  cvm_normality_criterion.md  cvm_weibull_criterion.md  deshpande_exp_criterion.md  epps_pulley_exp_criterion.md  epstein_exp_criterion.md  frozini_exp_criterion.md  gini_exp_criterion.md  gnedenko_exp_criterion.md  graph_edges_number_exp_criterion.md  graph_max_degree_exp_criterion.md  harris_exp_criterion.md  hegazy2_exp_criterion.md  holander_proshan_exp_criterion.md  index.md  kimber_michael_exp_criterion.md  kochar_exp_criterion.md  kolmogorov_smirnov_exp_criterion.md  lorenz_exp_criterion.md  min_toshiyuki_weibull_criterion.md  moran_exp_criterion.md  pietra_exp_criterion.md  requirements-docs.txt  rossberg_exp_criterion.md  shapiro_wilk_exp_criterion.md  we_exp_criterion.md  wong_wong_exp_criterion.md
en/: versions.json
en/main/: 404.html  index.html  requirements-docs.txt  sitemap.xml
en/main/ahsanullah_exp_criterion/: index.html
en/main/atkinson_exp_criterion/: index.html
en/main/cox_oakes_exp_criterion/: index.html
en/main/cvm_exp_criterion/: index.html
en/main/deshpande_exp_criterion/: index.html
en/main/epps_pulley_exp_criterion/: index.html
en/main/epstein_exp_criterion/: index.html
en/main/frozini_exp_criterion/: index.html
en/main/gini_exp_criterion/: index.html
en/main/gnedenko_exp_criterion/: index.html
en/main/graph_edges_number_exp_criterion/: index.html
en/main/graph_max_degree_exp_criterion/: index.html
en/main/harris_exp_criterion/: index.html
en/main/hegazy1_exp_criterion/: index.html
en/main/hegazy2_exp_criterion/: index.html
en/main/holander_proshan_exp_criterion/: index.html
en/main/kimber_michael_exp_criterion/: index.html
en/main/kochar_exp_criterion/: index.html
en/main/kolmogorov_smirnov_exp_criterion/: index.html
en/main/lorenz_exp_criterion/: index.html
en/main/moran_exp_criterion/: index.html
en/main/pietra_exp_criterion/: index.html
en/main/rossberg_exp_criterion/: index.html
en/v0.0.1-alpha/: index.html  sitemap.xml
pysatl/criterion/: models.py  normal.py  weibull.py
pysatl_criterion/: __init__.py  common.py  constants.py  criterion.py  exponent.py  goodness_of_fit.py  graph_goodness_of_fit.py  hypothesis.py  model.py  normal.py  weibull.py
pysatl_criterion/core/: __init__.py  expon.py  weibull.py
pysatl_criterion/gof/: common.py  exponent.py  goodness_of_fit.py  graph.py  normal.py  weibull.py
pysatl_criterion/multiple_testing/: __init__.py  abstract_multiple_testing.py  fdr.py  fwer.py
pysatl_criterion/persistence/: alchemy_decorator.py
pysatl_criterion/resolver/: critical_value_resolvers.py  model.py  p_value_resolver.py
pysatl_criterion/statistics/: __init__.py  beta.py  common.py  exponent.py  gamma.py  goodness_of_fit.py  graph_goodness_of_fit.py  log_normal.py  models.py  normal.py  student.py  uniform.py  weibull.py
pysatl_criterion/test/: model.py
pysatl_criterion/uniformity/: model.py  uniformity.py
pysatl_criterion/util/: distribution.py  statistic.py
pysatl_criterion/utils/: statistic.py
src/pysatl_criterion/: __init__.py
tests/: exponentiality_test.py  goodness_of_fit.py  graph_goodness_of_fit_test.py  models_test.py  normality_test.py  weibull_test.py
tests/calc/: test_cv.py  test_goodness_of_fit_test.py  test_p_value.py
tests/critical_value/: test_composite_resolver.py  test_critical_areas.py  test_remote_loader.py
tests/distributions/: test_beta.py  test_exponent.py  test_gamma.py  test_log_normal.py  test_normal.py  test_student.py  test_uniform.py  test_weibull.py
tests/estimation/: test_function_for_maximum_likelihood_method.py  test_function_maximum_likelihood.py
tests/generator/: test_generators.py
tests/gof/: exponentiality_test.py  goodness_of_fit.py  graph_goodness_of_fit_test.py  models_test.py  normality_test.py  weibull_test.py
tests/multiple_testing/: test_fdr.py  test_fwer.py
tests/persistence/: test_datastorage.py  test_limit_distribution.py
tests/statistics/: goodness_of_fit.py  test_alternative.py  test_beta.py  test_exponent.py  test_function_for_maximum_likelihood_method.py  test_gamma.py  test_graph_goodness_of_fit.py  test_hypothesis_type.py  test_log_normal.py  test_models.py  test_normal.py  test_uniform.py
tests/uniformity/: uniformity_test.py
tests/util/: statistic.py
tests/utils/: test_distribution.py  test_generator.py  test_statistic.py
tests/weibull/: weibull_test.py
(+150 files in other folders)
