[project]
name = "pysatl-criterion"
version = "0.0.0"
dynamic = ["version"]
description = "Package with statistic criteria for PySATL"
authors = [
    {name = "PySATL Team", email = "pysatl@yahoo.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.25.1",
    "scipy>=1.11.2",
    "pandas>=2.2.1",
    "typing-extensions>=4.12.2",
    "networkx == 3.4.2",
    "sqlalchemy == 2.0.50",
    "zstandard == 0.25.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]

[project.urls]
Homepage = "https://github.com/PySATL/pysatl-criterion"
Issues = "https://github.com/PySATL/pysatl-criterion/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.8.0,<2.0.0", extras = ["plugin"] }

[tool.poetry]
name = "pysatl_criterion"
packages = [
    { include = "pysatl_criterion", from = "src" },
]
package-mode = true

[tool.poetry.group.dev.dependencies]
markdown = "3.10.2"
mkdocs = "1.6.1"
mkdocs-material = "9.7.6"
mdx-truly-sane-lists = "1.3"
pymdown-extensions = "10.21.3"
jinja2 = "3.1.6"
mike = "2.2.0"
isort = "8.0.1"
coveralls = "4.1.0"
pytest = "9.0.3"
pytest-cov = "7.1.0"
pytest-random-order = "1.2.0"
ruff = "0.15.14"
pytest-mock = "3.15.1"
pre-commit = "4.6.0"
mypy = "2.1.0"

[tool.isort]
line_length = 100
profile = "black"
# multi_line_output=3
lines_after_imports=2
skip_glob = ["**/.env*", "**/env/*", "**/.venv/*", "**/docs/*", "**/user_data/*"]

[tool.ruff]
line-length = 100
extend-exclude = [".env", ".venv"]

[tool.ruff.lint]
extend-select = [
  "C90", "B", "F", "E", "W", "UP", "I", "A", "TID", "YTT", "S", "PTH", "ASYNC", "NPY"
]
extend-ignore = [
  "E241", "E272", "E221", "B007", "B904", "S603", "S607", "S608", "NPY002"
]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.flake8]
ignore = ["E121", "E123", "E126", "E24", "E203", "E704", "W503", "W504"]
max-line-length = 100
max-complexity = 12
exclude = [".git", "__pycache__", ".eggs", "user_data", ".venv", ".env"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", "S104", "S311", "S105", "S106", "S110"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

# Формат для НЕ tagged commits
format-jinja = """
{%- if distance == 0 -%}
    {{ base }}
{%- else -%}
    {{ base }}.dev{{ distance }}+{{ commit }}
{%- endif -%}
"""